Updated package files

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "@yellow-snow/rate-limit",
+  "name": "@wiser/plexio-rate-limit",
   "version": "0.0.1",
   "description": "Rate Limit | Yellow Snow",
-  "private": false,
   "main": "./lib/index",
   "types": "./lib/index",
   "scripts": {
@@ -16,10 +15,6 @@
     "lint": "node node_modules/tslint/bin/tslint -c tslint.json -e \"**/*.spec.ts\"  src/**/*.ts"
   },
   "author": "John A. Fedoruk <johnny@johnfedoruk.ca> (http://johnfedoruk.ca)",
-  "license": "mit-licence",
-  "publishConfig": {
-    "access": "public"
-  },
   "dependencies": {
     "@yellow-snow/core": "0.0.3",
     "@yellow-snow/http": "0.0.3",
